--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintRight_toLeftOf="@+id/button"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="215dp"
         tools:layout_editor_absoluteY="604dp"
         tools:text="@tools:sample/lorem" />
@@ -28,25 +29,29 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toTopOf="@+id/edit_text"
-        app:layout_constraintBottom_toBottomOf="@+id/edit_text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="614dp" />
+
+
+        />
 
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="187dp"
-            android:layout_height="181dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginLeft="12dp"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias = "1.0"
             app:layout_constraintBottom_toTopOf="@+id/edit_text"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="95dp"
-            tools:layout_editor_absoluteY="81dp" />
+            android:text=""
+
+            />
 
 
 </android.support.constraint.ConstraintLayout>
