--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <EditText
         android:hint="Enter text here"
         android:id="@+id/edit_text"
@@ -36,8 +37,8 @@
         />
 
 
-        <TextView
-            android:id="@+id/textView"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
@@ -52,6 +53,8 @@
             android:text=""
 
             />
+
+
 
 
 </android.support.constraint.ConstraintLayout>
