--- a/app/src/main/res/layout/item_per_chat.xml
+++ b/app/src/main/res/layout/item_per_chat.xml
@@ -4,13 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="80dp">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        app:srcCompat="#1139E7"
+
         tools:layout_editor_absoluteX="53dp"
         tools:layout_editor_absoluteY="310dp"
         app:layout_constraintTop_toTopOf="parent"
