--- a/app/src/main/res/layout/activity_msg__details.xml
+++ b/app/src/main/res/layout/activity_msg__details.xml
@@ -6,23 +6,41 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Msg_Details">
+    tools:context=".Msg_Details"
+    android:background="#3366ff"
+    android:gravity = "center"
+   >
 
 
     <Button
         android:id="@+id/button3"
         android:layout_width="177dp"
         android:layout_height="99dp"
-        android:text="Button"
+        tools:layout_editor_absoluteX="218dp"
+        android:clickable="true"
+        android:text="Permanent delete"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="218dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="#009933"
+
+        />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="148dp"
-        android:layout_height="78dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="240dp" />
+        android:layout_width="241dp"
+        android:layout_height="432dp"
+        android:layout_marginBottom="48dp"
+
+        android:gravity="center"
+        android:includeFontPadding="false"
+        android:shadowColor="#990000"
+        android:text=""
+
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
